Fixed: New select boxes did not show country flags Fixed: New select boxes where nearly invisible on hidden form sections after unfolding
git-svn-id: svn://svn.ispconfig.org/ispconfig3/branches/ispconfig-3.0.5@3583 c1a6f2c7-8504-0410-933a-a4dae0184b0a

--- a/interface/web/themes/default/css/styles.css
+++ b/interface/web/themes/default/css/styles.css
@@ -837,6 +837,12 @@ div[class^=country-] {
     height: 20px;
     width: 26px;
 }
+li[class^=country-] {
+    background-image: url("../icons/flags_sprite.png");
+    background-repeat: no-repeat;
+    text-indent: 24px;
+}
+li[class^=country-] a.ui-state-hover { background: transparent; }
 div[class^=country-] span {
     display: none;
 }
